@@ -6,5 +6,6 @@
   "magnify.jolly_boxes_tab": "Jolly Boxes",
   "magnify.dustrial_decor_tab": "'Dustrial Decor",
   "magnify.upgrade_aquatic_tab": "Upgrade Aquatic",
-  "magnify.sullys_mod_tab": "Sully's Mod"
+  "magnify.sullys_mod_tab": "Sully's Mod",
+  "magnify.boatload_tab": "Boatload"
 }
